--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/buffers": "^0.1.31",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-query": "^1.2.9",
     "@types/swagger-ui-react": "^4.1.1",
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
