--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -17,20 +18,28 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-query": "^1.2.9",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.20",
     "@types/swagger-ui-react": "^4.1.1",
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "axios": "^0.24.0",
     "buffer": "^6.0.3",
+    "install": "^0.13.0",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.23.0",
     "react-query": "^3.34.7",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "safe-buffer": "^5.2.1",
     "stream": "^0.0.2",
+    "styled-components": "^5.3.3",
     "swagger-ui-react": "^4.1.3",
     "tailwindcss": "^3.0.13",
     "typescript": "^4.5.4",
@@ -61,5 +70,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:8000/"
+  "proxy": "http://127.0.0.1:8000/",
+  "devDependencies": {
+    "@types/react-redux": "^7.1.22",
+    "@types/redux-logger": "^3.0.9"
+  }
 }
