--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@handsontable/react": "^11.1.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -25,15 +26,24 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.24.0",
     "buffer": "^6.0.3",
+    "csv-react-table": "^2.0.7",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
+    "papaparse": "^5.3.1",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
+    "react-csv": "^2.2.2",
+    "react-csv-reader": "^3.4.0",
+    "react-datasheet": "^1.4.9",
     "react-dom": "^17.0.2",
+    "react-file-reader": "^1.1.4",
     "react-hook-form": "^7.23.0",
+    "react-icons": "^4.3.1",
     "react-query": "^3.34.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
