--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@handsontable/react": "^11.1.0",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/bullet": "^0.79.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -78,6 +80,7 @@
   },
   "proxy": "http://127.0.0.1:8000/",
   "devDependencies": {
+    "@types/papaparse": "^5.3.1",
     "@types/react-redux": "^7.1.22",
     "@types/redux-logger": "^3.0.9"
   }
